[package]
name = "wmpf-offset-finder"
version = "0.2.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
