[package]
name = "wmpf-address-rust"
version = "0.2.0"
edition = "2024"
description = "WMPF 地址自动分析工具 - 支持 macOS (ARM64) 和 Windows (x86_64)"
license = "MIT"

[dependencies]
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
eframe = { version = "0.31", default-features = false, features = ["default", "glow"] }
egui = "0.31"
rfd = "0.15"
arboard = "3"
